	* Korean translation added (kr)
	* Run-time OSCAR support
	* Added buddy list ticker (See prefs/Appearance). Clicking on a
	  name will cause a new or previous IM window to display for 
	  that screenname 
	* "You are sending messages too quickly" error is now fixed
	   when you have a large buddylist.
	* Dialog windows are now prettier
	* Fixed the LC_ALL compile problem on Solaris boxes 

version 0.9.19 (06/09/2000):
	* Graphical Smiley Faces
	* Applet got a bit of a makeover (inside & out)
	* Compile-time options affect Preferences dialog
	* Whispering in chat works (does anyone even use this?)
	* HTML-tag buttons in chat
	* Chat got all kinds of new features (like IRC-sytle /me)
	* Chat in oscar works much better
	* Locale support
	* Fixed the segfault when your server-side config is null
	* Many many bugfixes

version 0.9.18 (06/02/2000):
	* Logging in works better for oscar
	* Double error bug when sending message to an offline user is
	  fixed.
	* Pressing enter once again sends a message in buddy chatrooms (oops)
	* More fixes for the change on the AOL sign-on process. 
	* Fixed bug where GAIM sometimes doesn't find a font to use.
	* Per-conversation font and color dialogs (thanks fflewddur)
	* Chat in oscar works (somewhat)
	* Even more fixes for the sign-on process, and now you don't flash when
	  setting permit/deny lists.

version 0.9.17 (05/31/2000):
	* Automagic feature to check for new versions has been removed
	* Infinite loop bug fixed

version 0.9.16: (05/31/2000)
	* Paned buddy chat window (Thanks Syd)
	* Buddy lists (and changes) are cached to ~/.gaim/<sn>.blist
	  where <sn> is your screen name. If for some reason, you log
          into the AOL server and the buddy list comes back empty, we
	  check for a cache file, and, if we find one, read it in. This
          essentially implements recovery from a server crash at AOL
	  (AOL does not back up machines that contain TOC-based buddy
	  lists, unfortunately).  (Thanks Syd)